# landsearch

./: .gitignore  AGENTS.md  PLAN.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  alembic.ini  init_db.py  logging.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 25f047cef674_initial.py  7990c2c7c37f_add_nspd_fields_object_type_land_plot_.py  9475ddaeb0ab_add_settlement_id_index_on_plots.py  a43c91fd7b20_add_legal_profile_and_retention.py  b6a31e0d8f2c_add_manual_settlement_boundaries.py  c8d1fdce5a91_scope_plot_numbers_to_tenant.py  d91f7c3a2b10_add_settlement_pois.py  df732c4d9e10_add_reservations.py  e8c2a921ab44_add_audit_webhook_outbox.py  f1a7b33c4e20_add_settlement_publication.py  ff1b2c3d4e50_add_lead_assignment_fields.py  ff2c3d4e5f60_repair_settlement_pois_schema.py
backend/app/: main.py  metrics.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  exceptions.py  middleware.py  rate_limit.py  security.py
backend/app/models/: __init__.py  db.py
backend/app/schemas/: __init__.py
backend/app/services/: analysis.py  audit.py  (+14 more)
backend/scripts/: discover_tatarstan.py  fetch_geometry.py  monitor.py  quarters.json  refresh_kazan.py  run_fetch.sh  scan_kazan.py  scan_tatarstan.py  tatarstan_cadastre.json
backend/tests/: conftest.py  test_auth.py  test_leads.py  test_legal_settings.py  test_plots.py  test_search.py
backend/unit_tests/: test_audit_webhooks.py  test_cadastre_source.py  test_plot_data_quality.py  test_pois.py  test_production_hardening.py  test_reservation_api_contract.py  test_vri.py
(+119 files in other folders)
