[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "landsearch"
version = "0.1.0"
description = "SaaS платформа для поиска и продажи земельных участков"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "geoalchemy2>=0.15.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pynspd>=1.1.0",
    "shapely>=2.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.130.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
[ tool.mypy.overrides ]
  module = "sqlalchemy.*"
  ignore_errors = true
